syntax = "proto3";

package com.github.bannirui.raft.proto;

option java_package = "com.github.bannirui.raft.proto";
option java_outer_classname = "ServerProto";

message SetRequest{
  optional string key   = 1;
  optional string value = 2;
}

message SetResponse{
  optional bool success = 1;
}

message GetRequest{
  optional string key = 1;
}

message GetResponse{
  optional string value = 1;
}